fix junti test passed; fixed forced bindings for multiple updates